tests/error/02.desc
Runtime error - slice func: invalid right border